--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,7 +1,7 @@
 <nav>
     <div class="blog-title">
-        <a href="/"><h1>Blog Ninja</h1></a>
-        <p>A Net Ninja Site</p>
+        <a href="/"><h1>My Blogs</h1></a>
+        <p>Explore your own wisdom</p>
     </div>
     <ul>
         <li><a href="/">Blogs</a></li>
